<resources>
    <string name="app_name">SMS Scheduler</string>
    <string name="sms">SMS</string>
    <string name="current_status_of_sms">current status of SMS</string>
    <string name="total">Total</string>
    <string name="sent">Sent</string>
    <string name="pending">Pending</string>
    <string name="failed">Failed</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="scheduled_sms">Scheduled SMS</string>
    <string name="time_colon">Time:</string>
    <string name="date_colon">Date:</string>
    <string name="to_colon">To:</string>
    <string name="message_colon">Message:</string>
    <string name="home">Home</string>
    <string name="timeline">Timeline</string>
    <string name="log">Log</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="error_empty">Field must not be empty</string>
    <string name="cancel">Cancel</string>
    <string name="delete_entry_title">Delete entry</string>
    <string name="delete_entry_message">Are you sure you want to delete this entry?</string>
    <string name="delete_yes">Yes</string>
    <string name="delete_no">No</string>
    <string name="type_message_here">Type message here</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_upcoming_events">No Upcoming Events</string>
    <string name="type_name_to_search">type name to search</string>
    <string name="settings">Settings</string>
    <string name="enable_auto_start_title">Enable Auto Start</string>
    <string name="enable_auto_start_subtitle">if there is an issue with scheduling</string>
    <string name="about">About</string>
    <string name="enable_event_notification">Notification</string>
    <string name="enable_notification_vibration">Notification vibration</string>
    <string name="status_colon">Status:</string>
    <string name="datetime_colon">DateTime:</string>
    <string name="summary">Summary</string>
    <string name="sort">Sort</string>
</resources>