<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:elevation="8dp"
    android:padding="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_to_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_colon"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_to"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_to_title"
            app:layout_constraintEnd_toStartOf="@+id/iv_launch"
            app:layout_constraintStart_toEndOf="@+id/tv_to_title"
            app:layout_constraintTop_toTopOf="@+id/tv_to_title"
            tools:text="123456" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_to"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/message_colon"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_to_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_to_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_message_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_message_title"
            app:layout_constraintTop_toTopOf="@+id/tv_message_title"
            tools:text="Hello!" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/datetime_colon"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_to_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_message" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_date_title"
            app:layout_constraintStart_toEndOf="@+id/tv_date_title"
            app:layout_constraintTop_toTopOf="@+id/tv_date_title"
            tools:text="12 August, 2020 10.30 PM" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/status_colon"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_date_title"
            app:layout_constraintEnd_toStartOf="@+id/tv_time"
            app:layout_constraintTop_toTopOf="@+id/tv_date_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_time_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_message_title"
            app:layout_constraintTop_toTopOf="@+id/tv_time_title"
            tools:text="PENDING" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
